--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "typescript": "^4.1.2"
+    "typescript": "$TYPESCRIPT_VERSION"
   }
 }
