chore: large update
Signed-off-by: Godefroy Ponsinet <gponsinet@pm.me>

--- a/babel/package.json
+++ b/babel/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "dotmk": "latest"
   }
 }
