--- a/docker/.SpaceVim.d/init.toml
+++ b/docker/.SpaceVim.d/init.toml
@@ -4,5 +4,7 @@
 [[layers]]
   name = "lsp"
   filetypes = ["dockerfile"]
+  [layers.override_cmd]
+    dockerfile = ["$DOCKER_LANGSERVER_PATH", "--stdio"]
 
 
