--- a/react-native/package.json
+++ b/react-native/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
-    "@tsconfig/react-native": "^1.0.2"
+    "@tsconfig/react-native": "^1.0.2",
+    "react-native": "$REACT_NATIVE_VERSION"
   }
 }
