--- a/go/.SpaceVim.d/init.toml
+++ b/go/.SpaceVim.d/init.toml
@@ -1,6 +1,8 @@
+# go.mk
+
 [[layers]]
   name = "lang#go"
 
-[[layers]]
-  name = "lsp"
-  filetypes = ["go"]
+# [[layers]]
+#   name = "lsp"
+#   filetypes = ["go"]
