--- a/javascript/.SpaceVim.d/init.toml
+++ b/javascript/.SpaceVim.d/init.toml
@@ -1,7 +1,9 @@
+# javascript.mk
+
 [[layers]]
   name = "lang#javascript"
   auto_fix = true
 
-[[layers]]
-  name = "lsp"
-  filetypes = ["javascript"]
+# [[layers]]
+#   name = "lsp"
+#   filetypes = ["javascript"]
