--- a/flow/.SpaceVim.d/init.toml
+++ b/flow/.SpaceVim.d/init.toml
@@ -4,8 +4,8 @@
   name "lang#javascript"
   enable_flow_syntax = true
 
-[[layers]]
-  name = "lsp"
-  filetypes = ["javascript"]
-  [layers.override_cmd]
-    javascript = ["flow", "lsp"]
+# [[layers]]
+#   name = "lsp"
+#   filetypes = ["javascript"]
+#   [layers.override_cmd]
+#     javascript = ["flow", "lsp"]
