chore: some updates
Signed-off-by: Godefroy Ponsinet <gponsinet@pm.me>

--- a/typescript/.SpaceVim.d/init.toml
+++ b/typescript/.SpaceVim.d/init.toml
@@ -1,8 +1,8 @@
 # typescript.mk
 
-[[layers]]
-  name = "lang#typescript"
-  typescript_server_path = "$TYPESCRIPT_SERVER_PATH"
+# [[layers]]
+#   name = "lang#typescript"
+#   typescript_server_path = "$TYPESCRIPT_SERVER_PATH"
 
 # [[layers]]
 #   name = "lsp"
